--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <section class="container">
-        <div class="box"></div>
+        <div class="box">
+            <div class="image" draggable="true"></div>
+         </div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
