--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
     <title>Drag and Drop App</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <div class="hero">
+        <h1> Photo Drag and Drop</h1>
     <section class="container">
         <div class="box">
             <div class="image" draggable="true"></div>
@@ -15,5 +20,7 @@
         <div class="box"></div>
         <div class="box"></div>
     </section>
+    </div>
+    
 </body>
 </html>
