Made photo to be draggable and droppable by JS

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
     </section>
     </div>
     
 </body>
+<script src="script.js"></script>
 </html>
