Added the footer and made App to be SEO friendly

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
-    <title>Drag and Drop App</title>
+    <meta name="description" content="A simple drag and drop appplication made by Tsaone Bejile, a Gaborone, Botswana based front-end developer">
+    
+    <title>Drag and Drop App by Tsaone Bejile</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -22,6 +24,13 @@
         <div class="box"></div>
         <div class="box"></div>
     </section>
+    <footer>
+    <p>
+        ✨This project was coded by Tsaone W Bejile and it is 
+        <a href="https://github.com/tsaonehh/my-photo-drag-app/" target="_blank" title="Tsaone's GitHub"> open-sourced </a>
+     </p>
+    </footer>
+    <br>
     </div>
     
 </body>
