Improved the SEO

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="hero">
         <h1> Photo Drag and Drop</h1>
+        <h2> App </h2>
     <section class="container">
         <div class="box">
             <div class="image" draggable="true"></div>
@@ -26,7 +27,7 @@
     </section>
     <footer>
     <p>
-        ✨This project was coded by Tsaone W Bejile and it is 
+        ✨This project was coded by <a href="https://meek-cendol-e5e18a.netlify.app/" target="_blank" title="Tsaone's Portfolio">Tsaone W Bejile</a> and it is 
         <a href="https://github.com/tsaonehh/my-photo-drag-app/" target="_blank" title="Tsaone's GitHub"> open-sourced </a>
      </p>
     </footer>
